--- a/css/styles.css
+++ b/css/styles.css
@@ -533,3 +533,67 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-social-svg{
   fill: #f4f4fd;
 }
+.subscribe-container{
+  display: block;
+  
+}
+.subscribe-form{
+  margin-right: 120px;
+  display: flex;
+  gap: 24px;
+}
+.subscribe-text{
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.input-mail{
+  border-radius: 4px;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background: #2e2f42;
+  width: 264px;
+  height: 40px;
+  color: #fff;
+  padding-left: 16px;
+  font-size: 12px;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+line-height: 1.5;
+letter-spacing: 0.04em;
+background-color: transparent;
+}
+.input-mail::placeholder{
+  color: #ffffff;
+}
+.subscribe-button{
+  display:flex;
+padding: 8px 24px;
+justify-content: center;
+align-items: center;
+border-radius: 4px;
+background-color: #4D5AE5;
+max-width: 165px;
+border: none;
+color: #fff;
+text-align: center;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+margin-left: 24px;
+cursor: pointer;
+}
+.subscribe-button:hover,
+.subscribe-button:focus{
+  background-color: #404bbf;
+}
+.subscribe-svg{
+  fill: #f4f4fd;
+  margin-left: 16px;
+}
