--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ body {
 .header-page {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46,47,66,0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-page-container {
   display: flex;
@@ -113,9 +113,8 @@ body {
   display: flex;
   gap: 40px;
   justify-content: space-between;
-  
 }
-.current{
+.current {
   color: #404bbf;
   font-size: 16px;
   font-weight: 500;
@@ -131,7 +130,7 @@ body {
   display: block;
   position: absolute;
   left: 0;
-  content: '';
+  content: "";
   bottom: -1px;
   width: 100%;
   height: 4px;
@@ -180,7 +179,7 @@ body {
   font-size: 16px;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
- transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-item:focus,
 .address-item:hover {
@@ -309,10 +308,10 @@ body {
   width: calc((100% - 72px) / 4);
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
-box-shadow: 0px 2px 1px 0px rgba(46,47,66,0.08),
-0px 1px 1px 0px rgba(46,47,66,0.16),
-0px 1px 6px 0px rgba(46,47,66,0.08);
-text-align: center;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  text-align: center;
 }
 .container-team {
   padding: 32px 0;
@@ -336,38 +335,37 @@ text-align: center;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
-.socials{ align-items: center;
+.socials {
+  align-items: center;
   justify-content: center;
   display: flex;
-  gap:24px ;
+  gap: 24px;
 }
-.socials-item{
+.socials-item {
   flex-shrink: 0;
   width: 40px;
   height: 40px;
-  
 }
-.socials-team-link{
+.socials-team-link {
   width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50%;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: #4D5AE5;}
-.socials-team-link:hover,
-.socials-team-link:focus{
-background-color: #404bbf;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
 }
-
-.socials-svg:hover{
+.socials-team-link:hover,
+.socials-team-link:focus {
   background-color: #404bbf;
 }
-.socials-svg{
-  
-  fill: #f4f4fd;
 
+.socials-svg:hover {
+  background-color: #404bbf;
+}
+.socials-svg {
+  fill: #f4f4fd;
 }
 /* Portfolio */
 .portfolio-page {
@@ -393,39 +391,39 @@ background-color: #404bbf;
   row-gap: 48px;
 }
 .portfolio-list {
-background: #FFF;
+  background: #fff;
   border-radius: 0px 0px 4px 4px;
   background: #fff;
   width: calc((100 - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-list:hover{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.portfolio-list:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-list:hover .overlay{
+.portfolio-list:hover .overlay {
   transform: translateY(0%);
-  
 }
-.porfolio-box-overlay{
+.porfolio-box-overlay {
   position: relative;
-overflow:hidden;
+  overflow: hidden;
 }
 
-.overlay{
-position: absolute;
-top: 0;
-height: 100%;
-width: 100%;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #f4f4fd;
-padding: 40px 32px;
-background-color: #4D5AE5;
-overflow: auto;
-transform: translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.overlay {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-portfolio {
@@ -458,7 +456,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: baseline;
 }
-.logo-text{
+.logo-text {
   margin-right: 120px;
 }
 .logo-footer {
@@ -497,7 +495,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 }
-.footer-text-social{
+.footer-text-social {
   font-family: "Roboto";
   font-size: 16px;
   font-weight: 500;
@@ -506,17 +504,17 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #ffffff;
   margin-bottom: 16px;
 }
-.footer-list-social{
+.footer-list-social {
   display: flex;
   gap: 16px;
 }
-.footer-item-social{
+.footer-item-social {
   width: 40px;
   height: 40px;
- background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-social{
+.list-social {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -524,76 +522,289 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
   justify-content: center;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-social:hover,
-.list-social:focus{
-  background-color:#31d0aa ;
+.list-social:focus {
+  background-color: #31d0aa;
 }
-.footer-social-svg{
+.footer-social-svg {
   fill: #f4f4fd;
 }
-.subscribe-container{
+.subscribe-container {
   display: block;
-  
+  margin-left: 83px;
 }
-.subscribe-form{
-  margin-right: 120px;
+.subscribe-form {
   display: flex;
   gap: 24px;
+  border: none;
 }
-.subscribe-text{
-  color: #FFF;
+.subscribe-text {
+  color: #fff;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
-.input-mail{
+.input-mail {
   border-radius: 4px;
   border: 1px solid #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background: #2e2f42;
   width: 264px;
   height: 40px;
   color: #fff;
   padding-left: 16px;
   font-size: 12px;
-  padding-left: 16px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-line-height: 1.5;
-letter-spacing: 0.04em;
-background-color: transparent;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background: transparent;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-.input-mail::placeholder{
+.input-mail::placeholder {
   color: #ffffff;
 }
-.subscribe-button{
-  display:flex;
-padding: 8px 24px;
-justify-content: center;
-align-items: center;
-border-radius: 4px;
-background-color: #4D5AE5;
-max-width: 165px;
-border: none;
-color: #fff;
-text-align: center;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.04em;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-margin-left: 24px;
-cursor: pointer;
+.subscribe-button {
+  display: flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  max-width: 165px;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-left: 24px;
+  cursor: pointer;
 }
 .subscribe-button:hover,
-.subscribe-button:focus{
+.subscribe-button:focus {
   background-color: #404bbf;
 }
-.subscribe-svg{
+.subscribe-svg {
   fill: #f4f4fd;
   margin-left: 16px;
+}
+/* backdrop modal window */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999999;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.modal {
+  position: absolute;
+  width: 408px;
+  min-height: 584px;
+  padding: 72px 24px 24px 24px;
+  border-radius: 4px;
+  background: var(--DAIRY, #FCFCFC);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-button {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--CORNFLOWER, #E7E9FC);
+  border: 1px solid rgba(0, 0, 0, 0.10);
+  /* border: none; */
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  top: 24px;
+  right: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-button:hover,
+.modal-close-button:focus {
+    background-color: rgba(64, 75, 191, 1);
+    fill: rgba(255, 255, 255, 1);
+    border: none;
+}
+.modal-text {
+  color: var(--NAVY-BLUE, #2E2F42);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+.modal-form-wrapper {
+  margin-bottom: 8px;
+}
+
+.modal-form-label {
+  display: block;
+  color: var(--LIGHT-SLATE, #8E8F99);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+  margin-bottom: 4px;
+
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  outline: transparent;
+}
+
+.modal-form-input:focus {
+  border: 1px solid #4D5AE5;
+  outline: transparent;
+}
+
+.modal-form-input:focus+.modal-form-icon {
+  fill: rgba(77, 90, 229, 1);
+}
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-comment {
+  display: block;
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  outline: transparent;
+  padding: 8px 16px;
+  resize: none;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.div-spec-margin {
+  margin-bottom: 16px;
+}
+.modal-form-comment:focus {
+  border-color: rgba(77, 90, 229, 1);
+
+}
+
+.modal-form-comment::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+
+}
+
+.modal-form-wrapper-checkbox {
+  margin-bottom: 24px;
+}
+.modal-form-checkbox-label {
+  display: block;
+  color: var(--LIGHT-SLATE, #8E8F99);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+}
+
+.modal-form-checkbox-mark {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.40);
+  border-radius: 2px;
+  cursor: pointer;
+  fill: transparent;
+  margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-checkbox-input:checked+.modal-form-checkbox-label>.modal-form-checkbox-mark {
+  background-color: #404BBF;
+  border: 1px solid var(--OCEAN, #404BBF);
+  fill: rgba(244, 244, 253, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
+}
+
+.modal-form-checkbox-input:focus+.modal-form-checkbox-label>.modal-form-checkbox-mark {
+  outline: 2px solid rgba(0, 0, 255, 0.5);
+}
+
+
+.modal-form-privacy {
+  color: var(--IRIS, #4D5AE5);
+  line-height: 1.33;
+  text-decoration: underline;
+}
+.modal-button-submit {
+  display: block;
+  min-width: 169px;
+  margin: 0 auto;
+  color: var(--WHITE, #FFF);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: 16px 32px;
+  align-items: flex-start;
+  gap: 10px;
+  border: none;
+  border-radius: 4px;
+  background: var(--IRIS, #4D5AE5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.modal-button-submit:hover,
+.modal-button-submit:focus {
+    background: var(--OCEAN, #404BBF);
 }
